reports toggle spacing fix

--- a/src/irb-app/irb-reports/index.styl
+++ b/src/irb-app/irb-reports/index.styl
@@ -40,7 +40,7 @@ mp-black = #2c3642
     border-bottom 1px solid grey-150
     display inline-block
     &.border-spacer-left
-      width 34px
+      min-width 39px
     &.border-spacer-right
       width 100%
   .user-filter-option
